--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.0.4",
     "element-ui": "^2.3.2",
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
